Add code for training fast-style-transfer model

--- a/model/style_transfer/TrainStyleTransfer.ipynb
+++ b/model/style_transfer/TrainStyleTransfer.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset: COCO 2014 Training images dataset (13GB)"
+    "Dataset: COCO 2014 Training images dataset (82k images / 13GB)"
    ]
   },
   {
@@ -68,15 +68,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-10-0a11065134e8>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-0a11065134e8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    --log-interval {log_interval}\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/427bdd3d-17db-4d44-b722-f3e4fd35d808/projects/gauGAN/gaugan-venv/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n",
+      "Tue Jul 13 23:18:42 2021\tEpoch 1:\t[400/82783]\tcontent: 809673.422813\tstyle: 3969967.151250\ttotal: 4779640.574063\n",
+      "Tue Jul 13 23:19:00 2021\tEpoch 1:\t[800/82783]\tcontent: 878786.194219\tstyle: 2450695.805312\ttotal: 3329481.999531\n",
+      "Tue Jul 13 23:19:18 2021\tEpoch 1:\t[1200/82783]\tcontent: 898876.115104\tstyle: 1803829.087917\ttotal: 2702705.203021\n",
+      "Tue Jul 13 23:19:36 2021\tEpoch 1:\t[1600/82783]\tcontent: 903768.554297\tstyle: 1440883.829141\ttotal: 2344652.383437\n",
+      "Tue Jul 13 23:19:54 2021\tEpoch 1:\t[2000/82783]\tcontent: 898898.971312\tstyle: 1209208.157125\ttotal: 2108107.128437\n",
+      "Tue Jul 13 23:20:12 2021\tEpoch 1:\t[2400/82783]\tcontent: 891710.746198\tstyle: 1049551.749193\ttotal: 1941262.495391\n",
+      "Tue Jul 13 23:20:30 2021\tEpoch 1:\t[2800/82783]\tcontent: 882831.234598\tstyle: 932551.216451\ttotal: 1815382.451049\n",
+      "Tue Jul 13 23:20:48 2021\tEpoch 1:\t[3200/82783]\tcontent: 872200.885508\tstyle: 842960.392246\ttotal: 1715161.277754\n",
+      "Tue Jul 13 23:21:06 2021\tEpoch 1:\t[3600/82783]\tcontent: 862070.548507\tstyle: 772075.256441\ttotal: 1634145.804948\n",
+      "Tue Jul 13 23:21:24 2021\tEpoch 1:\t[4000/82783]\tcontent: 851537.292156\tstyle: 714545.144266\ttotal: 1566082.436422\n",
+      "Tue Jul 13 23:21:42 2021\tEpoch 1:\t[4400/82783]\tcontent: 841496.847415\tstyle: 667051.822585\ttotal: 1508548.670000\n"
      ]
     }
    ],
