setup on laptop

--- a/model/all_models/fast_neural_style/TrainStyleTransfer.ipynb
+++ b/model/all_models/fast_neural_style/TrainStyleTransfer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -89,13 +89,13 @@
       "    train(args)\n",
       "  File \"./pytorch_examples/examples/fast_neural_style/neural_style/neural_style.py\", line 43, in train\n",
       "    train_dataset = datasets.ImageFolder(args.dataset, transform)\n",
-      "  File \"/home/bai/.local/lib/python3.8/site-packages/torchvision/datasets/folder.py\", line 310, in __init__\n",
-      "    super(ImageFolder, self).__init__(root, loader, IMG_EXTENSIONS if is_valid_file is None else None,\n",
-      "  File \"/home/bai/.local/lib/python3.8/site-packages/torchvision/datasets/folder.py\", line 145, in __init__\n",
+      "  File \"/home/bai/anaconda3/envs/python38/lib/python3.8/site-packages/torchvision/datasets/folder.py\", line 309, in __init__\n",
+      "    super().__init__(\n",
+      "  File \"/home/bai/anaconda3/envs/python38/lib/python3.8/site-packages/torchvision/datasets/folder.py\", line 144, in __init__\n",
       "    classes, class_to_idx = self.find_classes(self.root)\n",
-      "  File \"/home/bai/.local/lib/python3.8/site-packages/torchvision/datasets/folder.py\", line 221, in find_classes\n",
+      "  File \"/home/bai/anaconda3/envs/python38/lib/python3.8/site-packages/torchvision/datasets/folder.py\", line 218, in find_classes\n",
       "    return find_classes(directory)\n",
-      "  File \"/home/bai/.local/lib/python3.8/site-packages/torchvision/datasets/folder.py\", line 40, in find_classes\n",
+      "  File \"/home/bai/anaconda3/envs/python38/lib/python3.8/site-packages/torchvision/datasets/folder.py\", line 40, in find_classes\n",
       "    classes = sorted(entry.name for entry in os.scandir(directory) if entry.is_dir())\n",
       "FileNotFoundError: [Errno 2] No such file or directory: './datasets/train_images/'\n"
      ]
@@ -116,23 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jan  5 21:13:47 2023       \n",
+      "Fri Jan 20 18:48:36 2023       \n",
       "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 525.65       Driver Version: 527.56       CUDA Version: 12.0     |\n",
+      "| NVIDIA-SMI 527.92.01    Driver Version: 528.02       CUDA Version: 12.0     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
       "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  NVIDIA GeForce ...  On   | 00000000:01:00.0  On |                  N/A |\n",
-      "|  0%   51C    P8    18W / 200W |   2113MiB /  4096MiB |     16%      Default |\n",
+      "| N/A   50C    P8    14W / 125W |   6249MiB /  8192MiB |     12%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -141,7 +141,9 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A     16558      C   /python3.8                      N/A      |\n",
+      "|    0   N/A  N/A       124      G   /Xwayland                       N/A      |\n",
+      "|    0   N/A  N/A      1932      C   /python3.8                      N/A      |\n",
+      "|    0   N/A  N/A     14534      C   /python3.8                      N/A      |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -153,7 +155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 64-bit",
+   "display_name": "Python 3.8.15 ('python38')",
    "language": "python",
    "name": "python3"
   },
@@ -167,11 +169,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "8f75138c1297a3af202b81ab39136e343f81eb0792f99a01c9236b1d72bbc1de"
    }
   }
  },
